--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -15,9 +15,14 @@ body {
   background-size: contain;*/
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
-  position: relative;
+  /*overflow: hidden;*/
+  /*position: relative*/
 }
+
+/*.hero img {
+  width: 100%;
+  height: auto;
+}*/
 
 .container {
   display: flex;
