--- a/src/components/styles/popup.css
+++ b/src/components/styles/popup.css
@@ -1,17 +1,29 @@
 /* index.css */
+
 .modal {
   font-size: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.modal img {
+  width: 40%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .modal > .header {
   width: 100%;
   border-bottom: 1px solid gray;
-  font-size: 18px;
+  font-family: "Anton", sans-serif;
+  font-size: 38px;
   text-align: center;
   padding: 5px;
 }
 .modal > .content {
   width: 100%;
-  padding: 10px 5px;
+  padding: 12px;
+  font-family: "Oswald", sans-serif;
 }
 .modal > .actions {
   margin: auto;
@@ -33,4 +45,10 @@
   background: #bafdfe;
   border-radius: 18px;
   border: 1px solid #cfcece;
+}
+
+.modal button {
+  align-self: center;
+  border-radius: 20%;
+  padding: 6px;
 }
