--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -40,16 +40,8 @@ body {
   justify-content: center;
   color: white;
   margin: 0 auto;
-  padding-left: 5px;
   top: 65%;
-}
-
-.btn {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 2px 5px 5px 5px;
-  margin: 5px 5px;
+  width: 15%;
 }
 
 label {
@@ -72,13 +64,15 @@ label {
 
 .button {
   display: block;
-  padding: 15px;
-  margin: 15px;
+  padding: 20px;
+  margin: 20px;
   background: rgb(99, 199, 41);
   border-radius: 50%;
+  border: 2px solid white;
 }
 
 button {
+  border: 0;
   animation-duration: 1s;
   animation-fill-mode: both;
   animation-iteration-count: 1;
@@ -86,6 +80,7 @@ button {
 
 button:hover {
   animation-name: rubberBand;
+  background-color: rgb(58, 172, 13);
 }
 
 @keyframes rubberBand {
