--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,20 @@
   margin: 0;
   padding: 0;
 }
+.container {
+  position: relative;
+  z-index: 0;
+}
+.Webcam {
+  position: absolute;
+  width: 55%;
+  height: 55%;
+  z-index: 1;
+  right: 22%;
+  bottom: 33%;
+}
+
+.Hero {
+  position: absolute;
+  z-index: -1;
+}
