--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -19,10 +19,10 @@ body {
   /*position: relative*/
 }
 
-/*.hero img {
+.hero img {
   width: 100%;
   height: auto;
-}*/
+}
 
 .container {
   display: flex;
