--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -2,6 +2,10 @@
   font-family: "DisposableDroidBB";
   src: url("/fonts/DisposableDroidBB.ttf");
 }
+label {
+  font-family: "DisposableDroidBB";
+  font-size: 1.5em;
+}
 
 .buttonclass {
   position: fixed;
