--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
   z-index: 0;
 }
 .Webcam {
-  position: absolute;
-  width: 80%;
-  height: 80%;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   z-index: -1;
-  right: 10%;
+  bottom: 0;
 }
 
 .Hero {
