--- a/src/components/styles/hero.css
+++ b/src/components/styles/hero.css
@@ -6,8 +6,7 @@
 body {
   width: 100%;
   height: 100%;
-  background-color: pink;
-  background-image: url(https://images.unsplash.com/photo-1533424922832-a76b7d3563d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
+  background-color: black;
   background-repeat: no-repeat;
   background-size: 100vw;
 }
